# FerroCP

./: .clippy.toml  .gitignore  .goreleaser-simple.yml  .goreleaser-test.yml  .goreleaser.yml  .readthedocs.yaml  .shrimp-config.json  BENCHMARK_PLUGIN_FIX.md  BLAKE3_BENCHMARK_FIXES.md  BUILD_ISSUE_FIX_SUMMARY.md  CHANGELOG.md  CI_BUILD_FIXES.md  CI_CD_OPTIMIZATION_REPORT.md  CI_SIMPLIFICATION.md  CLI_ASYNC_FIX.md  CLI_ASYNC_FIXES.md  CODSPEED_ASYNC_FIX.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  GORELEASER_FIX_SUMMARY.md  LICENSE  LOCAL_BUILD_GUIDE.md  MANIFEST.in  MODERN_DESIGN_GUIDE.md  Makefile  NEW_FEATURES_SUMMARY.md  PERFORMANCE_BENCHMARKS.md  PERFORMANCE_BENCHMARK_OPTIMIZATION_REPORT.md  README.md  README_zh.md  RezGUI.tsx  TEST_COVERAGE_FIXES.md  WORKSPACE.md  benchmark_results_512kb_optimization.md  demo_new_features.py  ferrocp_benchmark.csv  go.mod  (+12 more)
.cargo/: config.toml
.github/: dependabot.yml  performance-config.yml  release-template.md
.github/workflows/: README.md  benchmark.yml  build-test.yml  bumpversion.yml  codecov.yml  codspeed.yml  docs.yml  goreleaser.yml  multi-platform-build.yml  release.yml  rust-benchmarks.yml  shared-setup.yml  test-goreleaser.yml  test-macos.yml  test-pgo.yml  test.yml  vfx-platform-test.yml
benches/: copy_benchmarks.rs  preread_optimization_bench.rs
benchmarks/: README.md  __init__.py  conftest.py  test_codspeed.py  test_comparison.py  test_performance.py  test_skip_existing.py  test_skip_optimization.py  utils.py
coverage/: cobertura.xml  index.html
crates/ferrocp-cli/: Cargo.toml
crates/ferrocp-cli/src/: display.rs  json_output.rs  lib.rs  main.rs  progress.rs
crates/ferrocp-compression/: Cargo.toml
crates/ferrocp-compression/proptest-regressions/: fuzz_tests.txt
crates/ferrocp-compression/src/: adaptive.rs  algorithms.rs  benchmarks.rs  engine.rs  error_tests.rs  fuzz_tests.rs  lib.rs  streaming.rs
crates/ferrocp-config/: Cargo.toml
crates/ferrocp-config/src/: builder.rs  error.rs  lib.rs  loader.rs  watcher.rs
crates/ferrocp-device/: Cargo.toml
crates/ferrocp-device/benches/: cache_performance.rs
crates/ferrocp-device/src/: analyzer.rs  cache.rs  detector.rs  lib.rs  optimization.rs  performance.rs  unix.rs  windows.rs
crates/ferrocp-engine/: Cargo.toml
crates/ferrocp-engine/benches/: selector_performance.rs
crates/ferrocp-engine/src/: engine.rs  executor.rs  lib.rs  monitor.rs  scheduler.rs  selector.rs  task.rs
crates/ferrocp-ffi/: Cargo.toml
crates/ferrocp-ffi/src/: callbacks.rs  engine.rs  error.rs  lib.rs  types.rs  utils.rs
crates/ferrocp-io/: Cargo.toml
crates/ferrocp-io/benches/: micro_copy_performance.rs
crates/ferrocp-io/src/: buffer.rs  copy.rs  error_tests.rs  lib.rs  memory.rs  memory_map.rs  micro_copy.rs  parallel.rs  preread.rs  property_tests.rs  reader.rs  stream.rs  writer.rs
crates/ferrocp-network/: Cargo.toml
crates/ferrocp-network/src/: client.rs  connection.rs  lib.rs  protocol.rs  resume.rs  server.rs  transfer.rs
crates/ferrocp-python/: Cargo.toml  build.rs
crates/ferrocp-python/src/: async_support.rs  batch_operations.rs  config.rs  copy.rs  error.rs  gil_optimization.rs  lib.rs  network.rs  object_cache.rs  progress.rs  sync.rs
crates/ferrocp-sync/: Cargo.toml
crates/ferrocp-sync/src/: cache.rs  conflict.rs  delta.rs  diff.rs  engine.rs  lib.rs  progress.rs
crates/ferrocp-tests/: Cargo.toml  README.md
crates/ferrocp-tests/benches/: comprehensive_benchmark_suite.rs  concurrency_benchmarks.rs  function_level_benchmarks.rs  memory_efficiency_benchmarks.rs  micro_benchmarks.rs  micro_copy_benchmark.rs  performance_benchmarks.rs  preread_benchmark.rs  syscall_efficiency_benchmarks.rs
crates/ferrocp-tests/examples/: baseline_metrics.json  benchmark_config.json  usage_example.rs
crates/ferrocp-tests/src/: concurrency_utils.rs  lib.rs  test_utils.rs
crates/ferrocp-tests/tests/: integration_tests.rs
crates/ferrocp-types/: Cargo.toml
crates/ferrocp-types/proptest-regressions/: types.txt
crates/ferrocp-types/src/: config.rs  error.rs  lib.rs  result.rs  traits.rs  types.rs
crates/ferrocp-zerocopy/: Cargo.toml
crates/ferrocp-zerocopy/src/: engine.rs  hardware.rs  lib.rs  linux.rs  macos.rs  methods.rs  windows.rs
docs/: ARM64_CROSS_COMPILATION_FIX.md  CI_FIXES_SUMMARY.md  CI_OPTIMIZATION.md  CROSS_COMPILATION.md  FUTURE_BINDINGS.md  JSON_OUTPUT.md  MACOS_BUILD_FIX.md  MARKDOWN_CLEANUP_PLAN.md  PGO_BUILD.md  README.md  SKIP_EXISTING_OPTIMIZATION.md  TESTING_IMPLEMENTATION_REPORT.md  VFX_PLATFORM_COMPATIBILITY.md  clippy-cross-platform.md  codspeed-setup.md  requirements.txt
examples/: real_copy_demo.rs  test_async_core.rs  test_compression.rs
include/: ferrocp.h  ferrocp.hpp
python/: README.md  build.py  pyproject.toml  test_basic.py
python/examples/: basic_usage.py
python/ferrocp/: __init__.py  __version__.py  _ferrocp.pyi  cli.py  config.py  py.typed
python/py_eacopy/: __init__.py  __version__.py  cli.py  config.py
scripts/: README.md  build-all-targets.sh  build-cross.sh  build-python-wheels.sh  clippy-check.ps1  clippy-check.sh  fake-main.go  format-check.ps1  generate_rust_coverage.py  local-ci-check.ps1  local-ci-check.sh  performance_analyzer.py  performance_test.py  pgo-build-windows.ps1  pgo-build.ps1  pgo-build.sh  pre-commit.sh  prepare-release.sh  profile.py  publish-crates.sh  quick-ci-check.ps1  quick-test.ps1  regression_test.py  run-benchmarks.bat  run-benchmarks.ps1  run-benchmarks.sh  run-integration-tests.sh  run-tests.ps1  setup-hooks.sh  test-arm64-build.sh  test-arm64-cross-compile.sh  test-arm64-fix.sh  test-build-fix.sh  test-ci-build.ps1  test-ci-config.ps1  test-coverage.ps1  test-coverage.sh  test-linux-ci.sh  test-windows-ci.ps1  zigbuild-cross.ps1  (+1 more)
src/: compression.rs  config.rs  core.rs  delta.rs  device_detector.rs  error.rs  lib.rs  network.rs  python.rs  windows_optimization.rs  zerocopy.rs
tests/: test_async_core.rs  test_cli.py  test_version.py
web/: README.md  debug.html  index.html  index.json  standalone.html  statistics.json  summary.json  test.html
(+29 files in other folders)
