[package]
name = "py-eacopy"
version = "0.1.0"
edition = "2021"
description = "High-performance file copying with Rust implementation"
license = "BSD-3-Clause"
authors = ["Long Hao <hal.long@outlook.com>"]
repository = "https://github.com/loonghao/py-eacopy"
homepage = "https://github.com/loonghao/py-eacopy"
documentation = "https://loonghao.github.io/py-eacopy"
keywords = ["file-copy", "performance", "async", "compression"]
categories = ["filesystem", "command-line-utilities"]

# Rust library for both CLI and Python bindings
[lib]
name = "py_eacopy"
crate-type = ["cdylib", "rlib"]

# CLI binary
[[bin]]
name = "eacopy"
path = "src/bin/eacopy.rs"

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# File system operations
walkdir = "2.4"
filetime = "0.2"
memmap2 = "0.9"

# Compression
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

# Hashing for file deduplication
blake3 = { version = "1.5", features = ["serde"] }
sha2 = "0.10"

# Serialization for network protocol
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Network communication
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI interface
clap = { version = "4.0", features = ["derive"], optional = true }

# Progress reporting
indicatif = "0.17"

# Configuration
toml = "0.8"

# Cross-platform utilities
num_cpus = "1.16"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"

# Development dependencies
[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
flamegraph = "0.6"

# Features
[features]
default = ["python", "cli"]
python = ["pyo3"]
cli = ["clap"]

# Rust benchmarks
[[bench]]
name = "copy_benchmarks"
harness = false

# Profile optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
debug = true