[package]
name = "ferrocp-compression"
description = "Adaptive compression system for FerroCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrocp-types = { path = "../ferrocp-types", features = ["async"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

# Compression algorithms
zstd = "0.13"
lz4_flex = "0.11"
brotli = "6.0"

# Performance monitoring
flate2 = "1.0"

[features]
default = ["serde"]
serde = ["dep:serde", "ferrocp-types/serde"]

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
arbitrary = { version = "1.3", features = ["derive"] }
