[package]
name = "ferrocp-config"
description = "Configuration management system for FerroCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrocp-types = { path = "../ferrocp-types", features = ["serde"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Configuration management
config = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# JSON support
serde_json = "1.0"

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
