[package]
name = "ferrocp-engine"
description = "Main copy engine for FerroCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
ferrocp-types = { path = "../ferrocp-types", features = ["async"] }
ferrocp-config = { path = "../ferrocp-config" }
ferrocp-io = { path = "../ferrocp-io" }
ferrocp-device = { path = "../ferrocp-device" }
ferrocp-zerocopy = { path = "../ferrocp-zerocopy" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# File operations
walkdir = { workspace = true }
filetime = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
num_cpus = { workspace = true }

# Serialization (optional)
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "selector_performance"
harness = false
