[package]
name = "ferrocp-network"
description = "Modern network communication for FerroCP"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ferrocp-types = { path = "../ferrocp-types", features = ["async"] }
ferrocp-config = { path = "../ferrocp-config" }

# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "macros", "time"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Network protocols
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }

# HTTP/3 support
h3 = { version = "0.0.8" }
h3-quinn = { version = "0.0.10" }

# Serialization
serde = { workspace = true, features = ["derive"] }
bincode = { version = "2.0" }

# Utilities
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { version = "1.5" }
uuid = { version = "1.6", features = ["v4"] }
crc32fast = { version = "1.3" }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
